# ChangeLog for dev-libs/libsigsegv
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/ChangeLog,v 1.25 2007/11/20 21:45:53 corsair Exp $

  20 Nov 2007; Markus Rothe <corsair@gentoo.org> libsigsegv-2.4.ebuild:
  Added ~ppc64; bug #199368

  18 Nov 2007; Jeroen Roovers <jer@gentoo.org> libsigsegv-2.4.ebuild:
  Marked ~hppa (bug #199368). Fixed quoting issues. Do not install COPYING.

  09 Sep 2007; Joseph Jezak <josejx@gentoo.org> libsigsegv-2.4.ebuild:
  Marked ppc stable for bug #173050.

  04 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  libsigsegv-2.4.ebuild:
  stable x86, bug 173050

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  libsigsegv-2.1.ebuild, libsigsegv-2.2.ebuild, libsigsegv-2.4.ebuild:
  SRC_URI changed to mirror://, fixes bug 163195

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libsigsegv-2.4.ebuild:
  Added ~ppc, bug #141470

*libsigsegv-2.4 (06 Jul 2006)

  06 Jul 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/libsigsegv-2.4-ppc-macos.patch, +libsigsegv-2.4.ebuild:
  New upstream version; Patch to configure.ac rather than configure.

  02 Sep 2005; Fabian Groffen <grobian@gentoo.org>
  +files/libsigsegv-2.2-ppc-macos.patch, libsigsegv-2.2.ebuild:
  Removing ppc-macos hack for configure/econf, ppc-macos should just use econf
  to get the right prefixes etc.  Adding a patch that disables Darwin5 testing
  in configure as it hangs for Darwin8.  (We only support Darwin7 and Darwin8)

  14 Jun 2005; <mkennedy@gentoo.org> libsigsegv-2.2.ebuild:
  Keywording ~sparc.

  18 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> libsigsegv-2.2.ebuild:
  Keywording for ~amd64

  14 Mar 2005; Olivier Crête <tester@gentoo.org> libsigsegv-2.2.ebuild:
  Add ~x86 back

*libsigsegv-2.2 (08 Mar 2005)

  08 Mar 2005; Nick Dimiduk <ndimiduk@gentoo.org> +libsigsegv-2.2.ebuild: