@@ -1,5 +1,5 @@
 AUX libsigsegv-2.4-ppc-macos.patch 563 RMD160 c90fb2655df403cc50d0c479f1581e9527fef851 SHA1 904d60e312128f6741718479b8c01a0b71c8db86 SHA256 378ce524f0ec90f1d8b40c7f9ce4df3eb56bc1677ac5ba190857b919b1ba6609
 DIST libsigsegv-2.4.tar.gz 376308 RMD160 5a52e3fe54a3380d4b25a034aa3de3e65974107d SHA1 e154ef9c04f499ea1f10c8f26882c1a38889d265 SHA256 fd9a48f99cf356609a9cbc7339f4fbb1795123ee4b92299224644146220b1fd5
-EBUILD libsigsegv-2.4.ebuild 850 RMD160 02a95211aac48f1922b5295b9fda6154975832f7 SHA1 f705b32316e9eeff06ad7c20e7b69624734c0bd3 SHA256 9658df430c7d7b40c6da458776be9f8b9a9be4c34f2f7e7da5f20f364798d328
-MISC ChangeLog 3406 RMD160 b946c016bcfb43ed14607abbbb89abdfd6d9dc25 SHA1 04e0bb251eeade00f047b50489eb7603b7cfea6b SHA256 070f0ca770af2d33edc68820a5aa4452836ad8c43f8c796cfd4497d9e681d2e6
+EBUILD libsigsegv-2.4.ebuild 864 RMD160 3b58373d133a9b25b7cb1f1035f9e8edaf9605f1 SHA1 fc4b8e69d71e447cdd27acccc94510056ba4b8f9 SHA256 15f9b027cf08426390e4e5e75b8a054a7d2f9c1d3e68eda20cf9e9506036d7f5
+MISC ChangeLog 3503 RMD160 f3cdf903df64037f9583fef9a8a813189d577505 SHA1 3561f8afc2b15ede8034f8e32b5937928eadd6d1 SHA256 4c0b085fefef6d16169a2fbcc6e221c0eccf3957a2b00731970d5330bce957b5
 MISC metadata.xml 617 RMD160 ba67f4688ca69e6a073eefdec298a6fdba3e79ed SHA1 0b1efd7a3b1025f77020df7f859a98618997983a SHA256 0b4704a55801727c4e341b4314239cc002777cb383f0499d2fe083da51cbc44f
