@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/libsigsegv-2.4.ebuild,v 1.7 2007/11/20 21:45:53 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/libsigsegv-2.4.ebuild,v 1.8 2007/12/08 16:39:18 drac Exp $
 
 EAPI="prefix"
 
@@ -22,12 +22,12 @@ src_unpack() {
 }
 
 src_compile() {
-	AT_M4DIR=m4 eautoreconf || die
-	econf --enable-shared || die
-	emake || die
+	AT_M4DIR=m4 eautoreconf
+	econf --enable-shared
+	emake || die "emake failed."
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die
-	dodoc AUTHORS ChangeLog* INSTALL NEWS PORTING README*
+	make DESTDIR="${D}" install || die "make install failed."
+	dodoc AUTHORS ChangeLog* NEWS PORTING README*
 }
